# grok-ai-relay

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  release.yml  stale.yml
docs/: CONTRIBUTING.md  architecture.md  usage.md
examples/: basic.py  error_handling.py  multi_turn.py  simple_relay.py  stream.py
src/grok_relay/: __init__.py  client.py
tests/: test_client.py
